--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav {
   width: 100vw;
   height: 98vh;
   background-color: #1d1d1f;
-  background-image: url("/assets/images/hero.jpeg");
+  background-image: url("assets/images/hero.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -125,7 +125,7 @@ nav {
 .iphone15 {
   width: 100%;
   height: 667px;
-  background-image: url("/assets/images/iphone15.jpeg");
+  background-image: url("assets/images/iphone15.jpeg");
   background-size: auto;
   background-position: center;
   color: #000000f0;
@@ -218,7 +218,7 @@ video {
 .macbook {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p1.jpeg");
+  background-image: url("assets/images/p1.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
@@ -249,7 +249,7 @@ video {
 .imac {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p2.jpeg");
+  background-image: url("assets/images/p2.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
@@ -260,7 +260,7 @@ video {
 .ipad {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p3.jpeg");
+  background-image: url("assets/images/p3.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
@@ -271,7 +271,7 @@ video {
 .watch-2 {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p4.jpeg");
+  background-image: url("assets/images/p4.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
@@ -282,7 +282,7 @@ video {
 .airpods {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p5.jpeg");
+  background-image: url("assets/images/p5.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
@@ -315,7 +315,7 @@ video {
 .tradein {
   width: calc(50% - 18px);
   height: 580px;
-  background-image: url("/assets/images/p6.jpeg");
+  background-image: url("assets/images/p6.jpeg");
   background-size: cover;
   background-position: center;
   margin-block: 6px;
